--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <H1>I am Zlata</H1>
     <p> 
-        i am zlata an i am very cool
+        i am zlata and i am very cool
     </p>
 </body>
 </html>
