--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <H1>I am Zlata</H1>
     <p> 
         i am zlata and i am very cool
+<br>
+        <img src = "images/cat.png">
     </p>
 </body>
 </html>
